fix(b2b-constants): resolve key overlapping
Adjusted CSS styles to prevent key names from overlapping with value in
the constants grid
Jira Issue: DS-701

--- a/src/app/home/b2b-flows-manage/flow-contants/flow-contants.component.scss
+++ b/src/app/home/b2b-flows-manage/flow-contants/flow-contants.component.scss
@@ -42,4 +42,28 @@
         max-height: 300px;
     }
 
+    .grid-cell.name {
+        position: relative;
+    }
+
+    .key-content {
+        max-height: 32px;
+        overflow-x: auto; 
+        overflow-y: hidden; 
+        white-space: nowrap;
+        cursor: pointer;
+    }
+
+    .key-content::-webkit-scrollbar {
+        width: 5px;
+        height: 5px; 
+    }
+
+    .key-content::-webkit-scrollbar-thumb {
+        background-color: #888;
+    }
+
+    .key-content::-webkit-scrollbar-thumb:hover {
+        background-color: #555;
+    }
 }
